# claude-session-browser

./: .gitignore  README.md  config.example.json  pyproject.toml  run.sh
.github/workflows/: ci.yml
app/: bookmarks.py  config.py  indexer.py  jsonl.py  launcher.py  main.py  models.py  parser.py  text.py  tokens.py
docs/superpowers/plans/: 2026-06-01-bookmarks.md  2026-06-01-claude-session-browser.md  2026-06-01-resume-session-launcher.md
docs/superpowers/specs/: 2026-06-01-bookmarks-design.md  2026-06-01-claude-session-browser-design.md  2026-06-01-resume-session-launcher-design.md
static/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_api_bookmark.py  test_api_resume.py  test_bookmarks.py  test_config.py  test_indexer.py  test_indexer_cache.py  test_integration.py  test_jsonl.py  test_launcher.py  test_models.py  test_parser.py  test_text.py  test_tokens.py
