[project]
name = "claude-session-browser"
version = "0.1.0"
description = "Local web browser for Claude Code session logs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Only `app` is an importable package; `static/` holds runtime assets and must
# not be treated as a package (otherwise setuptools flat-layout auto-discovery
# fails with "Multiple top-level packages discovered: ['app', 'static']").
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
